--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-
-body {
-  background: #131417;
-  font-family: "Poppins", sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI",Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-@keyframes play {
-  0% {
-      background-position: 0px;
+@layer base {
+    html {
+      font-family: 'Poppins', sans-serif;
+    }
   }
-  20% {
-      background-position: -110px;
-  }
-  35% {
-      background-position: -180px;
-  }
-  50% {
-      background-position: -210px;
-  }
-  80% {
-      background-position: -350px;
-  }
-  100% {
-      background-position: -390px;
-  }
-}
-#button-anon-pen:hover {
-  animation: play 1.6s ease-in infinite;
-}
